<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_LaudaWriteCommands_Rights" Id="{915be94d-cb04-477f-a986-a7d9fb570ffc}">
    <Declaration><![CDATA[TYPE ST_LaudaWriteCommands_Rights :
STRUCT
	KeyboardMaster_UlockLock				: STRING := 'OUT_MODE_00_';
	KeyboardRemoteControlUnit_UnlockLock	: STRING := 'OUT_MODE_03_';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>